atualização de dependencias, agora o projeto funciona com o postgres, pequenos melhoramentos

--- a/Projeto/src/main/resources/application.properties
+++ b/Projeto/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.username=root
-spring.datasource.password=root
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:postgresql://localhost:5432/Sirius
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
