--- a/Projeto/pom.xml
+++ b/Projeto/pom.xml
@@ -74,6 +74,11 @@
     		<artifactId>spring-plugin-core</artifactId>
     		<version>1.2.0.RELEASE</version>
 		</dependency>
+		<dependency>
+    		<groupId>javax.xml.bind</groupId>
+    		<artifactId>jaxb-api</artifactId>
+    		<version>2.3.0</version>
+		</dependency>
 		
 	</dependencies>
 
