--- a/Projeto/pom.xml
+++ b/Projeto/pom.xml
@@ -79,8 +79,19 @@
     		<groupId>javax.xml.bind</groupId>
     		<artifactId>jaxb-api</artifactId>
     		<version>2.3.0</version>
+		</dependency>			
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi-ooxml</artifactId>
+		    <version>4.1.2</version>
 		</dependency>
-		
+		<dependency>
+        	<groupId>org.apache.poi</groupId>
+        	<artifactId>poi</artifactId>
+        	<version>4.1.2</version>
+    	</dependency>
+
 	</dependencies>
 
 	<build>
