teste estrutural da cadastro

--- a/Projeto/src/main/resources/application.properties
+++ b/Projeto/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/Sirius
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=ADM87pgADM
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
